# openeebus

./: CMakeLists.txt  README.md  sources.cmake
.github/workflows/: ci.yaml
examples/heat_pump/: CMakeLists.txt  hpsrv.c
examples/hems/: CMakeLists.txt  eg_lpc_listener.c  eg_lpp_listener.c  hems.c
src/cli/: eebus_cli.c  eebus_cli.c.tmp  eebus_cli.h  eebus_cli_interface.h
src/ship/api/: mdns_entry.h
src/ship/mdns/: mdns_entry.c  ship_mdns_bonjour.c
src/ship/model/: model.h
src/ship/ship_connection/: client.c  server.c  ship_connection.c
src/ship/ship_node/: ship_node.c
src/ship/websocket/: websocket_client.c
src/spine/api/: entity_local_interface.h  feature_local_interface.h  pending_write_request_interface.h
src/spine/device/: device_local.c  device_local_internal.h
src/spine/entity/: entity_local.c  entity_local.c.tmp
src/spine/feature/: feature_local.c  feature_local.c.tmp  feature_local.h  feature_local_internal.h  pending_write_request.c  pending_write_request.c.tmp  pending_write_request.h
src/spine/model/: cmd.c  cmd.h  datagram.c  datagram.h  feature_types.c  loadcontrol_types.c  loadcontrol_types.h  model.c  model.h  usecase_information_types.c
src/spine/node_management/: node_management.c  node_management.c.tmp
src/use_case/actor/common/: load_control.c
src/use_case/actor/cs/: cs_lp.c
src/use_case/actor/cs/lpp/: cs_lpp.c
src/use_case/actor/eg/: eg_lp_events.c
src/use_case/model/: load_limit_types.c  load_limit_types.h  scaled_value.c  scaled_value.h
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
tests/src/mocks/common/eebus_thread/: eebus_thread_mock.cpp  eebus_thread_mock.h
tests/src/mocks/common/eebus_timer/: eebus_timer_mock.cpp  eebus_timer_mock.h
tests/src/mocks/service/api/: service_reader_mock.cpp  service_reader_mock.h
tests/src/mocks/service/service/: eebus_service_mock.cpp  eebus_service_mock.h
tests/src/mocks/ship/api/: data_reader_mock.cpp  data_reader_mock.h  info_provider_mock.cpp  info_provider_mock.h  ship_node_reader_mock.cpp  ship_node_reader_mock.h
tests/src/mocks/ship/mdns/: mdns_mock.cpp  mdns_mock.h
tests/src/mocks/ship/ship_connection/: data_writer_mock.cpp
tests/src/mocks/ship/ship_node/: ship_node_mock.cpp  ship_node_mock.h
tests/src/mocks/ship/tls_certificate/: tls_certificate_mock.cpp  tls_certificate_mock.h
tests/src/mocks/ship/websocket/: http_server_mock.cpp  http_server_mock.h  websocket_creator_mock.cpp  websocket_creator_mock.h  websocket_mock.cpp  websocket_mock.h
tests/src/mocks/spine/binding/: binding_manager_mock.cpp  binding_manager_mock.h
tests/src/mocks/spine/device/: device_local_mock.cpp  device_local_mock.h  device_mock.cpp  device_mock.h  device_remote_mock.cpp  device_remote_mock.h  sender_mock.cpp  sender_mock.h
tests/src/mocks/spine/entity/: entity_local_mock.cpp  entity_local_mock.h  entity_mock.cpp  entity_mock.h  entity_remote_mock.cpp  entity_remote_mock.h
tests/src/mocks/spine/feature/: feature_local_mock.cpp  feature_local_mock.h  feature_mock.cpp  feature_mock.h  feature_remote_mock.cpp  feature_remote_mock.h  operations_mock.cpp  operations_mock.h  pending_write_request_mock.cpp  pending_write_request_mock.h
tests/src/mocks/spine/function/: function_mock.cpp  function_mock.h
tests/src/mocks/spine/heartbeat_manager/: heartbeat_manager_mock.cpp  heartbeat_manager_mock.h
tests/src/mocks/spine/subscription/: subscription_manager_mock.cpp  subscription_manager_mock.h
tests/src/mocks/use_case/: use_case_mock.cpp  use_case_mock.h
tests/src/mocks/use_case/api/: cs_lp_listener_mock.cpp  eg_lp_listener_mock.cpp  ma_mpc_listener_mock.cpp
tests/src/ship/ship_connection/ship_connection/: ship_connection_test_suite.cpp
tests/src/ship/ship_connection/ship_connection/data_exchange/: data_exchange_test.cpp
tests/src/ship/ship_connection/ship_message_serialize/: buf_data_matcher.h
tests/src/ship/ship_node/: CMakeLists.txt
tests/src/spine/device/sender/: sender_result_error_test.cpp
tests/src/spine/feature/: CMakeLists.txt  write_approve_test.cpp  write_approve_test_suite.cpp  write_approve_test_suite.h
tests/src/spine/function/: filter_test_data.h  function_data_test_data.h
tests/src/spine/model/: feature_address_test_data.h
tests/src/use_case/: README.md  matchers.h  use_case_test_fixture.cpp  use_case_test_fixture.h
tests/src/use_case/actor/cs/lpc/: CMakeLists.txt  cs_lpc_test.cpp
tests/src/use_case/actor/cs/lpp/: CMakeLists.txt  (+1 more)
tests/src/use_case/model/scaled_value/: scaled_value_test.cpp
(+243 files in other folders)
